# apland-mode2-pis

./: API.md  API_USAGE.md  Containerfile  main.py  manage.py  podman-compose.yml  pyproject.toml
Esempi/Esempi/Frana di Cerda/: Dati_Pendio_Vettori Calibrazione.txt  Dati_Pendio_Vettori Previsione.txt
Esempi/Esempi/Frana di Cerda/Calibrazione 0-11/: Falda.txt  Pioggia.txt  Spostamento.txt  calibrazione_fi13.8.txt
Esempi/Esempi/Frana di Cerda/Previsione 11-20 mesi/: Falda.txt  Faldanulla.txt  Pioggia.txt  Spostamenti _nulli.txt  Spostamento.txt  previsione.txt  previsione_.txt
mode2/: asgi.py  settings.py  urls.py  wsgi.py
mode2/api/: apps.py  data_retrieval.py  dotnet_bridge.py  function_views.py  importers.py  tests.py  urls.py  validators.py  views.py
